sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/Merchant_Launch_Handoff__c.object-meta.xml
<CustomObject>
    <label>Merchant Launch Handoff</label>
    <pluralLabel>Merchant Launch Handoffs</pluralLabel>
    <nameField>
        <label>Handoff Name</label>
        <type>AutoNumber</type>
        <displayFormat>HANDOFF-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>