sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <label>Attempt Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <required>true</required>
</CustomField>