sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Downstream_Handoff_Id__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Handoff_Id__c</fullName>
    <label>Downstream Handoff Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>