sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Eligibility_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Snapshot__c</fullName>
    <label>Eligibility Snapshot</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>