sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <label>Last Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>