sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Launch_Version__c.field-meta.xml
<CustomField>
    <fullName>Launch_Version__c</fullName>
    <label>Launch Version</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <required>true</required>
</CustomField>