sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Launch Handoffs</relationshipLabel>
    <relationshipName>Launch_Handoffs</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>