sfdx-project/force-app/main/default/objects/Merchant_Launch_Handoff__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Eligible</fullName><default>false</default><label>Eligible</label></value>
            <value><fullName>Event_Published</fullName><default>false</default><label>Event Published</label></value>
            <value><fullName>Downstream_Accepted</fullName><default>false</default><label>Downstream Accepted</label></value>
            <value><fullName>Downstream_Failed</fullName><default>false</default><label>Downstream Failed</label></value>
            <value><fullName>Launched</fullName><default>false</default><label>Launched</label></value>
            <value><fullName>Blocked_Mismatch</fullName><default>false</default><label>Blocked - Mismatch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>